# easy-split

./: .gitignore  CLAUDE.md  Makefile  README.md  accounting.py  graph.py  loader.py  pyproject.toml  requirements.txt  run.py  setup.py
samples/: run.sh  sample_data.csv  sample_data.xlsx
src/easysplit/: __init__.py  __main__.py  config.py  exr.py  formatter.py  graph.py  loader.py  validator.py
src/easysplit/utils/: logger.py
src/tests/: test_exr.py  test_loader.py
tests/: test_auto_detect.py  test_graph_correctness.py  test_validator.py
